--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mcp-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.main:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.2
