--- a/render.yaml
+++ b/render.yaml
@@ -1,25 +1,6 @@
 services:
   - type: web
-    name: mcp-backend
+    name: mcp-docs-test
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.12.2
-      - key: SECRET_KEY
-        generateValue: true
-      - key: DATABASE_URL
-        fromDatabase:
-          name: mcp-db
-          property: connectionString
-      - key: ENVIRONMENT
-        value: production
-      - key: DEBUG
-        value: false
-
-databases:
-  - name: mcp-db
-    databaseName: mcp
-    user: mcp
-    plan: free 
